--- a/readocs/templates/login.html
+++ b/readocs/templates/login.html
@@ -9,9 +9,25 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <style type="text/css">
+      .alert-fixed {
+        position:fixed; 
+        top: 0px; 
+        left: 0px; 
+        width: 100%;
+        z-index:9999; 
+        border-radius:0px
+      }
+    </style>
+
     <title>Tomo ReaDocs</title>
   </head>
   <body>
+    {% if message %}
+    <div class="alert alert-danger alert-fixed" role="alert">
+      <strong>Invalid Credentials.</strong> Please try again.
+    </div>
+    {% endif %}
     <div class="container-fluid">
       <div class="row min-vh-100 align-items-center">
         <div class="col-3 bg-secondary min-vh-100">
