--- a/readocs/templates/projects.html
+++ b/readocs/templates/projects.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Test</title>
-</head>
+  {% load static %}
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Tomo ReaDocs</title>
+  </head>
 <body>
-	Dashboard here
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white fs-5" href="#">Tomo Readocs</a>
+          <div class="d-flex">
+            <a href="/logout" class="btn btn-sm btn-danger" type="submit">Log out</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col">
+                <div class="card">
+                  <div class="card-header bg-dark text-white fs-6">
+                    My Projects
+                  </div>
+                  <div class="card-body">
+                    {% if projects %}
+                    <div class="list-group">
+                    {% for project in projects %}
+                      <a href="/docs/{{ project.id }}/{{ project.name }}" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                          <h5 class="mb-1">{{ project.name }}</h5>
+                          <small class="text-muted">3 days ago</small>
+                        </div>
+                        <p class="mb-1">{{ project.description }}</p>
+                        <small class="text-muted">{{ project.upload.name }}</small>
+                      </a>
+                    {% endfor %}
+                    </div>
+                    {% endif %}
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
