--- a/readocs/templates/projects.html
+++ b/readocs/templates/projects.html
@@ -12,9 +12,11 @@
     <title>Tomo ReaDocs</title>
   </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand text-white fs-5" href="#">Tomo Readocs</a>
+        <a class="navbar-brand" href="#">
+          <img src="https://goldenfinancing.com/wp-content/uploads/2018/08/tglfc-logo.png" width="150" height="30" alt="">
+        </a>
           <div class="d-flex">
             <a href="/logout" class="btn btn-sm btn-danger" type="submit">Log out</a>
           </div>
@@ -26,7 +28,7 @@
         <div class="row mt-5">
             <div class="col">
                 <div class="card">
-                  <div class="card-header bg-dark text-white fs-6">
+                  <div class="card-header bg-primary text-white small">
                     My Projects
                   </div>
                   <div class="card-body">
