--- a/readocs/templates/login.html
+++ b/readocs/templates/login.html
@@ -18,6 +18,7 @@
         z-index:9999; 
         border-radius:0px
       }
+
     </style>
 
     <title>Tomo ReaDocs</title>
@@ -30,7 +31,7 @@
     {% endif %}
     <div class="container-fluid">
       <div class="row min-vh-100 align-items-center">
-        <div class="col-3 bg-secondary min-vh-100">
+        <div class="col-3 bg-warning min-vh-100">
             <div class="row align-items-center min-vh-100">
               <div class="col">
                 <form method="post">
@@ -41,14 +42,14 @@
                   <div class="mb-3">
                     <input type="password" name="password" class="form-control form-control-sm" id="input-password" placeholder="Password">
                   </div>
-                  <button type="submit" class="btn btn-sm btn-dark w-100">Submit</button>
+                  <button type="submit" class="btn btn-sm btn-primary w-100">Submit</button>
                 </form>
               </div>
             </div>
         </div>
 
         <div class="col-8">
-          <img class="w-50" src="{% static 'core/tomoreadocs.png' %}" alt="My image">
+          <img class="w-100" src="{% static 'core/tlgfc_temp_home.png' %}" alt="TGLFC image">
         </div>
       </div>
     </div>
