--- a/readocs/templates/swagger-ui.html
+++ b/readocs/templates/swagger-ui.html
@@ -13,9 +13,11 @@
   <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css" />
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
-    <a class="navbar-brand text-white fs-5" href="/">Tomo Readocs</a>
+    <a class="navbar-brand" href="#">
+      <img src="https://goldenfinancing.com/wp-content/uploads/2018/08/tglfc-logo.png" width="150" height="30" alt="">
+    </a>
       <div class="d-flex">
         <a href="/logout" class="btn btn-sm btn-danger" type="submit">Log out</a>
       </div>
